add readme and description

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "speller"
+description = "CLI tool for phonetic spelling"
 version = "0.1.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
