--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ version = "0.1.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 authors = ["Francesco Farina"]
+readme = "README.md"
+repository = "https://github.com/francescofarina/speller"
 
 [dependencies]
 toml = "0.8"
